2015-08-10  Frank Terbeck  <ft@bewatermyfriend.org>

	* 36046: Completion/Unix/Command/_tmux: _tmux: Update command line
	options

	* 36048: Completion/Unix/Command/_tmux: _tmux: Update options for
	supported commands

	* 36062: Completion/Unix/Command/_tmux: _tmux: Add support for new
	sub-commands

	* 36063: Completion/Unix/Command/_tmux: _tmux: Remove dead code

	* 36050: Completion/Unix/Command/_tmux: _tmux: Don't unset, set
	empty in local scope

	* 36058: Completion/Unix/Command/_tmux: _tmux: No need to unset
	local variables

	* 36057: Completion/Unix/Command/_tmux: _tmux: Replay all
	arguments when dispatching to new _tmux()

	* 36054: Completion/Unix/Command/_tmux: _tmux: "local -x" serves
	no purpose

	* 36049: Completion/Unix/Command/_tmux: _tmux: options =>
	session_options

	* 36056: Util/check-tmux-state: Add helper script to check state
	of _tmux completion

	* 36052: Completion/Unix/Command/_tmux: _tmux: Remove old
	sub-commands and their aliases

	* 36064: Completion/Unix/Command/_tmux: _tmux: Add new command
	aliases

	* 36047: Completion/Unix/Command/_tmux: _tmux: Fix options with
	changed scope

	* 36051: Completion/Unix/Command/_tmux: _tmux: Remove support for
	old options

	* 36059: Completion/Unix/Command/_tmux: _tmux: Add new session
	options

	* 36055: Completion/Unix/Command/_tmux: _tmux: Add support for new
	server options

	* 36061: Completion/Unix/Command/_tmux: _tmux: Add support for new
	window options

	* 36060: Completion/Unix/Command/_tmux: _tmux: Update TODO

	* 36070: Completion/Unix/Command/_tmux: _tmux: Update bell-action
	and prefix options

	* 36069: Completion/Unix/Command/_tmux: _tmux: Fix \ooo display in
	completion list

	* 36075: Util/check-tmux-state: Disable ‘local’ keyword in
	script to make data retrieval work

2015-08-10  Peter Stephenson  <p.stephenson@samsung.com>

	* 36045: Test/A05execution.ztst: make effect of failures
	in wait test cleare.

	* not quite posted: Src/Modules/socket.c, Src/Modules/tcp.c: