@@ -1,3 +1,8 @@
+2015-08-10  Peter Stephenson  <p.stephenson@samsung.com>
+
+	* 36074: Src/signals.c: Don't rely on implicit value for
+	saving status of background process.
+
 2015-08-10  Frank Terbeck  <ft@bewatermyfriend.org>
 
 	* 36046: Completion/Unix/Command/_tmux: _tmux: Update command line
